Create the my homework 02

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -12,6 +12,11 @@
         <div id="content" role="main">
 
   <!-- TODO: Content goes here -->
+<center>
+
+
+
+</center>
   <img src="EPAM_logo.svg" alt="Epam logo">
 
   <nav>
